fix tablet spacing on header

--- a/sass/components/_primary-header.scss
+++ b/sass/components/_primary-header.scss
@@ -11,22 +11,21 @@
    text-align: initial;
   }
   
+&__illustration {
+  margin: 5rem auto 0 auto;
+  width: clamp(16.688rem, 35vw, 29.688rem);
 
-  &__illustration {
-    margin: 5rem auto 0 auto;
-    width: clamp(16.688rem, 35vw, 29.688rem);
-    
-    @include mq(medium) {
-      margin: 5rem 0rem 5rem 5rem;
-    }
+  @include mq(medium) {
+    margin: 0;
+    width: 340px;
+    height: 100%;
+  }
 
-        @include mq(large) {
-          margin: 0rem 0rem 11.5rem 5rem;
-          width: clamp(16.688rem, 40vw, 29.688rem);
-          height: 100%;
-        }
-
-    
+  @include mq(large) {
+    margin: 0rem 0rem 11.5rem 5rem;
+    width: clamp(16.688rem, 40vw, 29.688rem);
+    height: 100%;
+  }
   }
 
   &__content-container {
@@ -34,7 +33,7 @@
       display: flex;
       flex-direction: row-reverse;
       padding-top: 6.5rem;
-      gap: 3.9rem;
+      gap: 0.9rem;
     }
 
     @include mq(large) {
@@ -50,6 +49,10 @@
       max-width: 28.5rem;
     }
    
+    @include mq(large) {
+      max-width: 33.5rem;
+    }
+
   }
 }
 
